# cosmos-terminal

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: gpt-5-nano-api-notes.md  markdown-renderer-spec.md
scripts/: README.md  build-dev.py  build-local.py  build-release.py  build-test.py  build.py  local.py  test.py
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: frontend_watcher.rs  lib.rs  main.rs  models.rs  watcher.rs
src-tauri/src/browser/: manager.rs
src-tauri/src/commands/: browser_commands.rs  fs_commands.rs  git_commands.rs  mod.rs  pty_commands.rs  system_commands.rs  task.rs  watcher_commands.rs
src-tauri/src/pty/: manager.rs  mod.rs  platform.rs  process_monitor.rs  session.rs  shell.rs
src-tauri/src/security/: path_guard.rs
src/components/: browser-tab-content.ts  confirm-dialog.ts  context-menu.ts  file-browser-sidebar.ts  file-tab-content.ts  find-in-document.ts  git-sidebar.ts  log-viewer.ts  project-settings-dialog.ts  project-tab-bar.ts  session-tab-bar.ts  settings-page.ts  split-container.ts  status-bar.ts  tab-indicators.ts  terminal-pane.ts  work-tab-bar.ts
src/highlight/: tokenizer.ts  types.ts
src/layout/: pane-layout.ts  pane-tree.ts  resize-handler.ts
src/services/: agent-definitions.ts  browser-service.ts  fs-service.ts  git-service.ts  initial-command.ts  ipc.ts  logger.ts  markdown-renderer.ts  markdown-types.ts  openai-service.ts  process-monitor-service.ts  pty-service.ts  settings-service.ts  store-loader.ts  system-monitor.ts  workspace-service.ts
src/state/: actions.ts  store.ts  types.ts
src/styles/: browser-tabs.css  confirm-dialog.css  context-menu.css  file-browser-sidebar.css  file-tab.css  find-in-document.css  git-sidebar.css  layout.css  log-viewer.css  project-settings.css  project-tabs.css  reset.css  session-tabs.css  settings.css  statusbar.css  syntax-highlight.css  tabs-shared.css  terminal.css  theme.css  work-tabs.css
src/utils/: base64.ts  debounce.ts  dom.ts  dropdown.ts  icons.ts  keybindings.ts  path.ts  platform.ts  scroll-arrows.ts  scrollable-tab-list.ts  sidebar-resize.ts  tab-drag.ts
tasks/: todo.md
tests/bench/: terminal-pane.bench.ts
tests/helpers/: terminal-pane-harness.ts
tests/integration/: capability-enforcement.test.ts  git-sidebar-render.test.ts  (+5 more)
tmp/: app-card.md  markdown-renderer-long-term-plan.md  privacy-policy.md  terms-and-conditions.md  workspace-save-load-plan.md
(+37 files in other folders)
