[package]
name = "cosmos-terminal"
version = "0.1.0"
description = "A high-performance terminal emulator"
authors = ["Cosmos"]
license = "MIT"
edition = "2021"

[lib]
name = "cosmos_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.33"
parking_lot = "0.12"
git2 = "0.19"
