[package]
name = "cosmos-terminal"
version = "0.1.118"
description = "A high-performance terminal emulator"
authors = ["Cosmos"]
license = "MIT"
edition = "2021"

[lib]
name = "cosmos_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "unstable"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
sysinfo = "0.33"
parking_lot = "0.12"
git2 = "0.19"
base64 = "0.22"
tokio = { version = "1", features = ["rt"] }
notify = "7"
notify-debouncer-mini = "0.5"
dunce = "1"
url = "2"
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_UI_Input_KeyboardAndMouse"] }
windows-core = "0.61"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true
opt-level = 3
